--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,4 @@ jobs:
         with: 
           images: leonelfilho89/conversao-temperatura:${{ github.run_number }}
           manifests:
-            k8s/deployment.yaml
+            src/k8s/deployment.yaml
